--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.nuget.mono-cecil": "1.10.2",
     "com.unity.postprocessing": "3.4.0",
     "com.unity.probuilder": "5.2.2",
+    "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.shadergraph": "14.0.11",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
