--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -14,6 +14,7 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "14.0.11",
     "com.unity.visualscripting": "1.9.4",
     "com.unity.xr.hands": "1.4.1",
     "com.unity.xr.interaction.toolkit": "2.5.4",
