--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,5 @@ crashlytics-build.properties
 Thumbs.db
 
 /.VSCodeCounter
+Assets/TextMesh Pro/Fonts/Electronic Highway Sign SDF.asset
+Assets/XR/Settings/OpenXR Package Settings.asset
